core/codegen/tests/ui-fail-stable/from_form_value.stderr
error: tuple structs are not supported
 --> $DIR/from_form_value.rs:4:1
  |
4 | struct Foo1;
  | ^^^^^^

error: [note] error occurred while deriving `FromFormValue`
 --> $DIR/from_form_value.rs:3:10
  |
3 | #[derive(FromFormValue)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
 --> $DIR/from_form_value.rs:8:1
  |
8 | struct Foo2(usize);
  | ^^^^^^

error: [note] error occurred while deriving `FromFormValue`
 --> $DIR/from_form_value.rs:7:10
  |
7 | #[derive(FromFormValue)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/from_form_value.rs:12:1
   |
12 | struct Foo3 {
   | ^^^^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:11:10
   |
11 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: variants cannot have fields
  --> $DIR/from_form_value.rs:19:5
   |
19 |     A(usize),
   |     ^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:17:10
   |
17 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: enum must have at least one field
  --> $DIR/from_form_value.rs:24:1
   |
24 | enum Foo5 { }
   | ^^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:23:10
   |
23 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type generics are not supported
  --> $DIR/from_form_value.rs:28:11
   |
28 | enum Foo6<T> {
   |           ^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:27:10
   |
27 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/from_form_value.rs:35:20
   |
35 |     #[form(value = 123)]
   |                    ^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:33:10
   |
33 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal or key/value pair
  --> $DIR/from_form_value.rs:42:12
   |
42 |     #[form(value)]
   |            ^^^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:40:10
   |
40 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
